--- a/strapiStore/frontend/package.json
+++ b/strapiStore/frontend/package.json
@@ -12,6 +12,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.7",
+    "framer-motion": "^10.13.0",
     "next": "^13.4.7",
     "pg": "^8.11.1",
     "postcss": "8.4.24",
