--- a/strapiStore/backend/package.json
+++ b/strapiStore/backend/package.json
@@ -26,8 +26,8 @@
     "uuid": "17abe31f-b763-43eb-917d-ca77ff2bfda8"
   },
   "engines": {
-    "node": ">=14.19.1 <=18.x.x",
-    "npm": ">=6.0.0"
+    "node": "16.17.0",
+    "npm": "9.7.2"
   },
   "license": "MIT"
 }
